--- a/lec-09/.env
+++ b/lec-09/.env
@@ -13,7 +13,7 @@ TestDbHost=127.0.0.1
 TestDbDriver=mysql
 TestDbUser=root
 TestDbPassword=123456
-TestDbName=tfs-02-test
+TestDbName=tfs-02_test
 TestDbPort=3306
 
 
